--- a/notebooks/openai_chatgpt.ipynb
+++ b/notebooks/openai_chatgpt.ipynb
@@ -104,8 +104,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "test_df = pd.read_csv(\"../data/test.tsv\", sep=\"\\t\")\n",
-    "\n"
+    "test_df = pd.read_csv(\"../data/test.tsv\", sep=\"\\t\")"
    ]
   },
   {
