--- a/notebooks/line_distilbert.ipynb
+++ b/notebooks/line_distilbert.ipynb
@@ -9,22 +9,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/imaseki/workspace/C103-latex/text_classify/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home/imaseki/workspace/c103-text-classify/text_classify/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "2023-10-22 20:09:38.646711: I tensorflow/core/util/port.cc:111] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2023-10-22 20:09:38.650307: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-10-22 20:09:38.689548: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2023-10-22 20:09:38.689588: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2023-10-22 20:09:38.689711: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2023-10-22 20:09:38.701916: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-10-22 20:09:38.702901: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-10-22 20:09:39.483280: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
       "Explicitly passing a `revision` is encouraged when loading a model with custom code to ensure no malicious code has been contributed in a newer revision.\n",
       "The tokenizer class you load from this checkpoint is not the same type as the class this function is called from. It may result in unexpected tokenization. \n",
       "The tokenizer class you load from this checkpoint is 'BertJapaneseTokenizer'. \n",
       "The class this function is called from is 'DistilBertJapaneseTokenizer'.\n",
-      "Some weights of the model checkpoint at line-corporation/line-distilbert-base-japanese were not used when initializing DistilBertModel: ['vocab_transform.bias', 'vocab_projector.bias', 'vocab_layer_norm.bias', 'vocab_projector.weight', 'vocab_layer_norm.weight', 'vocab_transform.weight']\n",
+      "Some weights of the model checkpoint at line-corporation/line-distilbert-base-japanese were not used when initializing DistilBertModel: ['vocab_projector.bias', 'vocab_layer_norm.weight', 'vocab_transform.bias', 'vocab_projector.weight', 'vocab_transform.weight', 'vocab_layer_norm.bias']\n",
       "- This IS expected if you are initializing DistilBertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing DistilBertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -42,10 +33,7 @@
     "tokenizer = AutoTokenizer.from_pretrained(\n",
     "    \"line-corporation/line-distilbert-base-japanese\", trust_remote_code=True\n",
     ")\n",
-    "model = AutoModel.from_pretrained(\"line-corporation/line-distilbert-base-japanese\")\n",
-    "\n",
-    "# sentence = \"LINE株式会社で[MASK]の研究・開発をしている。\"\n",
-    "# print(model(**tokenizer(sentence, return_tensors=\"pt\")))"
+    "model = AutoModel.from_pretrained(\"line-corporation/line-distilbert-base-japanese\")"
    ]
   },
   {
@@ -53,14 +41,6 @@
    "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/imaseki/workspace/C103-latex/text_classify/lib/python3.10/site-packages/numpy/core/fromnumeric.py:59: FutureWarning: 'DataFrame.swapaxes' is deprecated and will be removed in a future version. Please use 'DataFrame.transpose' instead.\n",
-      "  return bound(*args, **kwds)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -89,26 +69,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at line-corporation/line-distilbert-base-japanese were not used when initializing DistilBertForSequenceClassification: ['vocab_transform.bias', 'vocab_projector.bias', 'vocab_layer_norm.bias', 'vocab_projector.weight', 'vocab_layer_norm.weight', 'vocab_transform.weight']\n",
+      "Some weights of the model checkpoint at line-corporation/line-distilbert-base-japanese were not used when initializing DistilBertForSequenceClassification: ['vocab_projector.bias', 'vocab_layer_norm.weight', 'vocab_transform.bias', 'vocab_projector.weight', 'vocab_transform.weight', 'vocab_layer_norm.bias']\n",
       "- This IS expected if you are initializing DistilBertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing DistilBertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of DistilBertForSequenceClassification were not initialized from the model checkpoint at line-corporation/line-distilbert-base-japanese and are newly initialized: ['classifier.weight', 'pre_classifier.bias', 'pre_classifier.weight', 'classifier.bias']\n",
+      "Some weights of DistilBertForSequenceClassification were not initialized from the model checkpoint at line-corporation/line-distilbert-base-japanese and are newly initialized: ['classifier.bias', 'classifier.weight', 'pre_classifier.bias', 'pre_classifier.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
       "Explicitly passing a `revision` is encouraged when loading a model with custom code to ensure no malicious code has been contributed in a newer revision.\n",
       "The tokenizer class you load from this checkpoint is not the same type as the class this function is called from. It may result in unexpected tokenization. \n",
       "The tokenizer class you load from this checkpoint is 'BertJapaneseTokenizer'. \n",
       "The class this function is called from is 'DistilBertJapaneseTokenizer'.\n",
       "Map:   0%|          | 0/162 [00:00<?, ? examples/s]Asking to truncate to max_length but no maximum length is provided and the model has no predefined maximum length. Default to no truncation.\n",
-      "Map: 100%|██████████| 162/162 [00:00<00:00, 2591.10 examples/s]\n",
-      "Map: 100%|██████████| 54/54 [00:00<00:00, 2682.16 examples/s]\n",
-      "Map: 100%|██████████| 54/54 [00:00<00:00, 2542.09 examples/s]\n",
-      "The following columns in the training set don't have a corresponding argument in `DistilBertForSequenceClassification.forward` and have been ignored: __index_level_0__, poem. If __index_level_0__, poem are not expected by `DistilBertForSequenceClassification.forward`,  you can safely ignore this message.\n",
-      "/home/imaseki/workspace/C103-latex/text_classify/lib/python3.10/site-packages/transformers/optimization.py:306: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
+      "Map: 100%|██████████| 162/162 [00:00<00:00, 2342.88 examples/s]\n",
+      "Map: 100%|██████████| 54/54 [00:00<00:00, 2151.19 examples/s]\n",
+      "Map: 100%|██████████| 54/54 [00:00<00:00, 2143.37 examples/s]\n",
+      "The following columns in the training set don't have a corresponding argument in `DistilBertForSequenceClassification.forward` and have been ignored: poem. If poem are not expected by `DistilBertForSequenceClassification.forward`,  you can safely ignore this message.\n",
+      "/home/imaseki/workspace/c103-text-classify/text_classify/lib/python3.10/site-packages/transformers/optimization.py:306: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
       "  warnings.warn(\n",
       "***** Running training *****\n",
       "  Num examples = 162\n",
       "  Num Epochs = 3\n",
-      "  Instantaneous batch size per validice = 8\n",
+      "  Instantaneous batch size per device = 8\n",
       "  Total train batch size (w. parallel, distributed & accumulation) = 8\n",
       "  Gradient Accumulation steps = 1\n",
       "  Total optimization steps = 63\n",
@@ -121,8 +101,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='63' max='63' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [63/63 02:05, Epoch 3/3]\n",
+       "      <progress value='36' max='63' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [36/63 01:23 < 01:06, 0.41 it/s, Epoch 1.67/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -141,27 +121,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "Training completed. Do not forget to share your model on huggingface.co/models =)\n",
-      "\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "TrainOutput(global_step=63, training_loss=0.1281491688319615, metrics={'train_runtime': 127.4645, 'train_samples_per_second': 3.813, 'train_steps_per_second': 0.494, 'total_flos': 15214605166728.0, 'train_loss': 0.1281491688319615, 'epoch': 3.0})"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -208,30 +167,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The following columns in the test set don't have a corresponding argument in `DistilBertForSequenceClassification.forward` and have been ignored: __index_level_0__, poem. If __index_level_0__, poem are not expected by `DistilBertForSequenceClassification.forward`,  you can safely ignore this message.\n",
-      "***** Running Prediction *****\n",
-      "  Num examples = 54\n",
-      "  Batch size = 8\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "preds = trainer.predict(test_dataset)\n",
     "pred_labels = np.argmax(preds.predictions[0], axis=-1)"
@@ -239,23 +177,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9444444444444444"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pred_labelsをvalidデータで評価する\n",
     "accuracy_score(test_dataset[\"label\"], pred_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 単語ロジスティック回帰で誤っていた問題を解けていたか確認\n",
+    "\n",
+    "test_df[\"pred\"] = pred_labels\n",
+    "test_df[test_df[\"poem\"].map(lambda x: \"眼\" in x)]"
    ]
   },
   {
