一部のテーブルの習性

--- a/notebooks/line_distilbert.ipynb
+++ b/notebooks/line_distilbert.ipynb
@@ -2,38 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/imaseki/workspace/c103-text-classify/text_classify/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Explicitly passing a `revision` is encouraged when loading a model with custom code to ensure no malicious code has been contributed in a newer revision.\n",
-      "The tokenizer class you load from this checkpoint is not the same type as the class this function is called from. It may result in unexpected tokenization. \n",
-      "The tokenizer class you load from this checkpoint is 'BertJapaneseTokenizer'. \n",
-      "The class this function is called from is 'DistilBertJapaneseTokenizer'.\n",
-      "Some weights of the model checkpoint at line-corporation/line-distilbert-base-japanese were not used when initializing DistilBertModel: ['vocab_projector.bias', 'vocab_layer_norm.weight', 'vocab_transform.bias', 'vocab_projector.weight', 'vocab_transform.weight', 'vocab_layer_norm.bias']\n",
-      "- This IS expected if you are initializing DistilBertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing DistilBertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "\n",
-    "\n",
-    "import datasets\n",
-    "from transformers import AutoTokenizer, AutoModel\n",
-    "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\n",
-    "    \"line-corporation/line-distilbert-base-japanese\", trust_remote_code=True\n",
-    ")\n",
-    "model = AutoModel.from_pretrained(\"line-corporation/line-distilbert-base-japanese\")"
+    "pd.options.display.max_colwidth = 30"
    ]
   },
   {
@@ -42,12 +16,52 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/imaseki/workspace/c103-text-classify/text_classify/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Some weights of the model checkpoint at line-corporation/line-distilbert-base-japanese were not used when initializing DistilBertForSequenceClassification: ['vocab_transform.weight', 'vocab_layer_norm.bias', 'vocab_projector.weight', 'vocab_layer_norm.weight', 'vocab_projector.bias', 'vocab_transform.bias']\n",
+      "- This IS expected if you are initializing DistilBertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing DistilBertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of DistilBertForSequenceClassification were not initialized from the model checkpoint at line-corporation/line-distilbert-base-japanese and are newly initialized: ['pre_classifier.bias', 'classifier.weight', 'pre_classifier.weight', 'classifier.bias']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
+      "Explicitly passing a `revision` is encouraged when loading a model with custom code to ensure no malicious code has been contributed in a newer revision.\n",
+      "distilbert_japanese_tokenizer.py: 100%|██████████| 33.5k/33.5k [00:00<00:00, 3.10MB/s]\n",
+      "The tokenizer class you load from this checkpoint is not the same type as the class this function is called from. It may result in unexpected tokenization. \n",
+      "The tokenizer class you load from this checkpoint is 'BertJapaneseTokenizer'. \n",
+      "The class this function is called from is 'DistilBertJapaneseTokenizer'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "import datasets\n",
+    "from transformers import AutoTokenizer, DistilBertForSequenceClassification\n",
+    "\n",
+    "model = DistilBertForSequenceClassification.from_pretrained(\n",
+    "    \"line-corporation/line-distilbert-base-japanese\", num_labels=2\n",
+    ")\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\n",
+    "    \"line-corporation/line-distilbert-base-japanese\", trust_remote_code=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
        "(162, 54, 54)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,26 +76,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at line-corporation/line-distilbert-base-japanese were not used when initializing DistilBertForSequenceClassification: ['vocab_projector.bias', 'vocab_layer_norm.weight', 'vocab_transform.bias', 'vocab_projector.weight', 'vocab_transform.weight', 'vocab_layer_norm.bias']\n",
-      "- This IS expected if you are initializing DistilBertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing DistilBertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of DistilBertForSequenceClassification were not initialized from the model checkpoint at line-corporation/line-distilbert-base-japanese and are newly initialized: ['classifier.bias', 'classifier.weight', 'pre_classifier.bias', 'pre_classifier.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "Explicitly passing a `revision` is encouraged when loading a model with custom code to ensure no malicious code has been contributed in a newer revision.\n",
-      "The tokenizer class you load from this checkpoint is not the same type as the class this function is called from. It may result in unexpected tokenization. \n",
-      "The tokenizer class you load from this checkpoint is 'BertJapaneseTokenizer'. \n",
-      "The class this function is called from is 'DistilBertJapaneseTokenizer'.\n",
       "Map:   0%|          | 0/162 [00:00<?, ? examples/s]Asking to truncate to max_length but no maximum length is provided and the model has no predefined maximum length. Default to no truncation.\n",
-      "Map: 100%|██████████| 162/162 [00:00<00:00, 2342.88 examples/s]\n",
-      "Map: 100%|██████████| 54/54 [00:00<00:00, 2151.19 examples/s]\n",
-      "Map: 100%|██████████| 54/54 [00:00<00:00, 2143.37 examples/s]\n",
+      "Map: 100%|██████████| 162/162 [00:00<00:00, 275.73 examples/s]\n",
+      "Map: 100%|██████████| 54/54 [00:00<00:00, 899.93 examples/s]\n",
+      "Map: 100%|██████████| 54/54 [00:00<00:00, 1701.43 examples/s]\n",
       "The following columns in the training set don't have a corresponding argument in `DistilBertForSequenceClassification.forward` and have been ignored: poem. If poem are not expected by `DistilBertForSequenceClassification.forward`,  you can safely ignore this message.\n",
       "/home/imaseki/workspace/c103-text-classify/text_classify/lib/python3.10/site-packages/transformers/optimization.py:306: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
       "  warnings.warn(\n",
@@ -101,8 +106,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='36' max='63' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [36/63 01:23 < 01:06, 0.41 it/s, Epoch 1.67/3]\n",
+       "      <progress value='63' max='63' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [63/63 02:02, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -121,19 +126,33 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "Training completed. Do not forget to share your model on huggingface.co/models =)\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=63, training_loss=0.1594126413738917, metrics={'train_runtime': 125.1614, 'train_samples_per_second': 3.883, 'train_steps_per_second': 0.503, 'total_flos': 15214605166728.0, 'train_loss': 0.1594126413738917, 'epoch': 3.0})"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# train_dfのpoemを入力にlabelを2値分類するfine-tuningを行う\n",
     "\n",
-    "from transformers import DistilBertForSequenceClassification, Trainer, TrainingArguments\n",
-    "\n",
-    "model = DistilBertForSequenceClassification.from_pretrained(\n",
-    "    \"line-corporation/line-distilbert-base-japanese\", num_labels=2\n",
-    ")\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\n",
-    "    \"line-corporation/line-distilbert-base-japanese\", trust_remote_code=True\n",
-    ")\n",
+    "from transformers import Trainer, TrainingArguments\n",
     "\n",
     "\n",
     "def tokenize(batch):\n",
@@ -167,9 +186,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The following columns in the test set don't have a corresponding argument in `DistilBertForSequenceClassification.forward` and have been ignored: poem. If poem are not expected by `DistilBertForSequenceClassification.forward`,  you can safely ignore this message.\n",
+      "***** Running Prediction *****\n",
+      "  Num examples = 54\n",
+      "  Batch size = 8\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "preds = trainer.predict(test_dataset)\n",
     "pred_labels = np.argmax(preds.predictions[0], axis=-1)"
@@ -177,9 +217,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9444444444444444"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# pred_labelsをvalidデータで評価する\n",
     "accuracy_score(test_dataset[\"label\"], pred_labels)"
@@ -187,9 +238,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>poem</th>\n",
+       "      <th>label</th>\n",
+       "      <th>pred</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>時は常に背後から迫り唸りを上げて眼前に流れ去る踏み止...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>ああおれたちは皆眼をあけたまま空を飛ぶ夢を見てるんだ</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             poem  label  pred\n",
+       "3   時は常に背後から迫り唸りを上げて眼前に流れ去る踏み止...      0     0\n",
+       "15     ああおれたちは皆眼をあけたまま空を飛ぶ夢を見てるんだ      0     0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 単語ロジスティック回帰で誤っていた問題を解けていたか確認\n",
     "\n",
