--- a/notebooks/gensim_logistic.ipynb
+++ b/notebooks/gensim_logistic.ipynb
@@ -2,7 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "pd.options.display.max_colwidth = 30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +48,7 @@
        "(162, 54, 54)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +149,7 @@
        "0.8333333333333334"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +173,7 @@
        "0.7037037037037037"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -200,23 +210,20 @@
        "      <th></th>\n",
        "      <th>poem</th>\n",
        "      <th>label</th>\n",
-       "      <th>vector</th>\n",
        "      <th>pred</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>時は常に背後から迫り唸りを上げて眼前に流れ去る踏み止まれ時がお前を美しい世界へ押し流そうとど...</td>\n",
+       "      <td>時は常に背後から迫り唸りを上げて眼前に流れ去る踏み止...</td>\n",
        "      <td>0</td>\n",
-       "      <td>[0.10835943, 0.0106099155, -0.12551703, -0.333...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>ああおれたちは皆眼をあけたまま空を飛ぶ夢を見てるんだ</td>\n",
        "      <td>0</td>\n",
-       "      <td>[0.13821492, -0.0131085515, -0.31000143, -0.30...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -224,16 +231,12 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                 poem  label  \\\n",
-       "3   時は常に背後から迫り唸りを上げて眼前に流れ去る踏み止まれ時がお前を美しい世界へ押し流そうとど...      0   \n",
-       "15                         ああおれたちは皆眼をあけたまま空を飛ぶ夢を見てるんだ      0   \n",
-       "\n",
-       "                                               vector  pred  \n",
-       "3   [0.10835943, 0.0106099155, -0.12551703, -0.333...     0  \n",
-       "15  [0.13821492, -0.0131085515, -0.31000143, -0.30...     1  "
+       "                             poem  label  pred\n",
+       "3   時は常に背後から迫り唸りを上げて眼前に流れ去る踏み止...      0     0\n",
+       "15     ああおれたちは皆眼をあけたまま空を飛ぶ夢を見てるんだ      0     1"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +245,7 @@
     "# 単語ロジスティック回帰で誤っていた問題を解けていたか確認\n",
     "\n",
     "test_df[\"pred\"] = model.predict(np.stack(test_df[\"vector\"].values))\n",
-    "test_df[test_df[\"poem\"].map(lambda x: \"眼\" in x)]"
+    "test_df[test_df[\"poem\"].map(lambda x: \"眼\" in x)][[\"poem\", \"label\", \"pred\"]]"
    ]
   },
   {
