プロンプトの更新

--- a/notebooks/openai_chatgpt.ipynb
+++ b/notebooks/openai_chatgpt.ipynb
@@ -45,9 +45,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 少し3.5-turboで練習して、ある程度精度が出てきたら4に移行する\n",
     "import json\n",
@@ -61,25 +72,25 @@
     "            {\n",
     "                \"role\": \"user\",\n",
     "                \"content\": f\"\"\"\n",
-    "    あなたにポエムをBLEACHのものかコミックLOのものか判定してもらいます.\n",
-    "    BLEACHの例は以下の通りです。\n",
-    "    - 伏して生きるな、立ちて死すべし\n",
-    "    - そう、何ものもわたしの世界を変えられはしない\n",
-    "    - 僕は、ついてゆけるだろうか君のいない世界のスピードに\n",
-    "    - 剣を握らなければおまえを守れない剣を握ったままではおまえを抱き締められない\n",
-    "    - 軋む軋む浄罪の塔光のごとくに世界を貫く揺れる揺れる背骨の塔堕ちてゆくのはぼくらか空か\n",
+    "あなたにポエムをBLEACHのものかCOMIC LOのものか判定してもらいます.\n",
+    "BLEACHの例は以下の通りです。\n",
+    "- 伏して生きるな、立ちて死すべし\n",
+    "- そう、何ものもわたしの世界を変えられはしない\n",
+    "- 僕は、ついてゆけるだろうか君のいない世界のスピードに\n",
+    "- 剣を握らなければおまえを守れない剣を握ったままではおまえを抱き締められない\n",
+    "- 軋む軋む浄罪の塔光のごとくに世界を貫く揺れる揺れる背骨の塔堕ちてゆくのはぼくらか空か\n",
     "\n",
-    "    コミックLOの例は以下の通りです。\n",
-    "    - 女って、重いんだな。\n",
-    "    - 前を向く君は、青空より美しい。\n",
-    "    - 春の子供。\n",
-    "    - ロリコンに春は来ない。\n",
-    "    - この娘の母親が本当に好きだった。それを今、思い出した。\n",
-    "    - 僕は望む。そして叶うことを決して望まない。\n",
+    "COMIC LOの例は以下の通りです。\n",
+    "- 女って、重いんだな。\n",
+    "- 前を向く君は、青空より美しい。\n",
+    "- 春の子供。\n",
+    "- ロリコンに春は来ない。\n",
+    "- この娘の母親が本当に好きだった。それを今、思い出した。\n",
+    "- 僕は望む。そして叶うことを決して望まない。\n",
     "\n",
-    "    それでは、以下のポエムをBLEACHのものかコミックLOのものか判定してください.\n",
-    "    \"{poem}\"\n",
-    "    BLEACHの場合は0を、コミックLOの場合は1を返却してください.\n",
+    "それでは、以下のポエムをBLEACHのものかCOMIC LOのものか判定してください.\n",
+    "\"{poem}\"\n",
+    "BLEACHの場合は0を、COMIC LOの場合は1を出力してください.\n",
     "    \"\"\",\n",
     "            },\n",
     "        ],\n",
@@ -93,12 +104,14 @@
     "        json.loads(response.choices[0][\"message\"][\"function_call\"][\"arguments\"])[\n",
     "            \"label\"\n",
     "        ]\n",
-    "    )"
+    "    )\n",
+    "\n",
+    "get_gpt_pred(\"今度の終末はどこへ行く？\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,31 +122,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# poem2pred = {}"
+    "# poem2predがなければ新しく作る\n",
+    "try:\n",
+    "    poem2pred\n",
+    "except Exception as e:\n",
+    "    poem2pred = {}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n",
+      "50\n",
+      "51\n",
+      "52\n",
+      "53\n"
+     ]
+    }
+   ],
    "source": [
-    "# for poem in test_df[\"poem\"]:\n",
-    "#     if poem not in poem2pred.keys():\n",
-    "#         print(len(poem2pred))\n",
-    "#         poem2pred[poem] = get_gpt_pred(poem)\n",
+    "for poem in test_df[\"poem\"]:\n",
+    "    if poem not in poem2pred.keys():\n",
+    "        print(len(poem2pred))\n",
+    "        poem2pred[poem] = get_gpt_pred(poem)\n",
     "\n",
-    "# test_df[\"pred\"] = test_df[\"poem\"].map(lambda x: poem2pred[x])\n",
-    "# test_df.to_csv(\"../data/test_w_gpt.tsv\", sep=\"\\t\", index=False)"
+    "test_df[\"pred\"] = test_df[\"poem\"].map(lambda x: poem2pred[x])\n",
+    "test_df.to_csv(\"../data/test_w_gpt_20231203.tsv\", sep=\"\\t\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +220,7 @@
        "0.8148148148148148"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,6 +230,13 @@
     "\n",
     "accuracy_score(test_df[\"label\"], test_df[\"pred\"])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
